unpackaged/main/default/objects/CA_Event__c/CA_Event__c.object-meta.xml
<CustomObject>
    <label>CA Event</label>
    <nameField>
        <displayFormat>CAEV - {00000}</displayFormat>
        <label>CA Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>