unpackaged/main/default/objects/CA_Event__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Support/Career Fairs</fullName>
            </value>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>Corporate Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Fiber – Channel</fullName>
            </value>
            <value>
                <fullName>Fiber – Enterprise</fullName>
            </value>
            <value>
                <fullName>Fiber – Wholesale</fullName>
            </value>
            <value>
                <fullName>Fiber – Overlay</fullName>
            </value>
            <value>
                <fullName>Gov’t Relations/PA</fullName>
            </value>
            <value>
                <fullName>National Sales</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>SCN Sales</fullName>
            </value>
            <value>
                <fullName>Small Cell</fullName>
            </value>
            <value>
                <fullName>Supply Chain/Diversity</fullName>
            </value>
            <value>
                <fullName>Corporate – Other</fullName>
            </value>
            <value>
                <fullName>System-wide event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>