unpackaged/main/default/objects/CA_Event__c/fields/Congress_Manager__c.field-meta.xml
<CustomField>
    <fullName>Congress_Manager__c</fullName>
    <label>Congress Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andrew Rolls</fullName>
            </value>
            <value>
                <fullName>Ardolino, Carol</fullName>
            </value>
            <value>
                <fullName>Battaglia, Frank</fullName>
            </value>
            <value>
                <fullName>Budrecki, Sheree</fullName>
            </value>
            <value>
                <fullName>Casarotto, Ilenia</fullName>
            </value>
            <value>
                <fullName>Congress Manager 1</fullName>
            </value>
            <value>
                <fullName>Congress Manager 2</fullName>
            </value>
            <value>
                <fullName>Congress Manager 3</fullName>
            </value>
            <value>
                <fullName>Corrine Landolt</fullName>
            </value>
            <value>
                <fullName>Curtin, Nadine</fullName>
            </value>
            <value>
                <fullName>D&#39;Onofrio, Lisa</fullName>
            </value>
            <value>
                <fullName>Glowacki, Carolyn</fullName>
            </value>
            <value>
                <fullName>Horvath, Judy</fullName>
            </value>
            <value>
                <fullName>Jacqueline Campo</fullName>
            </value>
            <value>
                <fullName>Jassy, Daljit</fullName>
            </value>
            <value>
                <fullName>Joe Walsh</fullName>
            </value>
            <value>
                <fullName>John Hasemann</fullName>
            </value>
            <value>
                <fullName>Kaitlyn Reynolds</fullName>
            </value>
            <value>
                <fullName>Kepes, Erica</fullName>
            </value>
            <value>
                <fullName>Laurie Stein-Richards</fullName>
            </value>
            <value>
                <fullName>Lopez, Ralph</fullName>
            </value>
            <value>
                <fullName>Rebecca Baker</fullName>
            </value>
            <value>
                <fullName>Ridgeway, Alison</fullName>
            </value>
            <value>
                <fullName>Rosete, Aleida</fullName>
            </value>
            <value>
                <fullName>Schuler, Dan</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Syntcha, Dawn</fullName>
            </value>
            <value>
                <fullName>Throckmorton, Andrea</fullName>
            </value>
            <value>
                <fullName>Wallich, Barbara</fullName>
            </value>
            <value>
                <fullName>Werber, Michelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>