unpackaged/main/default/objects/CA_Event__c/fields/Day_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Date__c</fullName>
    <label>Day 2 Date</label>
    <type>Date</type>
</CustomField>