unpackaged/main/default/objects/CA_Event__c/fields/Day_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Date__c</fullName>
    <label>Day 3 Date</label>
    <type>Date</type>
</CustomField>