unpackaged/main/default/objects/CA_Event__c/fields/Day_3_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Open_Time__c</fullName>
    <label>Day 3 - Open Time</label>
    <type>Time</type>
</CustomField>