unpackaged/main/default/objects/CA_Event__c/fields/Day_5_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Date__c</fullName>
    <label>Day 5 Date</label>
    <type>Date</type>
</CustomField>