unpackaged/main/default/objects/CA_Event__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aisling Meehan</fullName>
            </value>
            <value>
                <fullName>Caitlin Ferdyn</fullName>
            </value>
            <value>
                <fullName>Curtin, Nadine</fullName>
            </value>
            <value>
                <fullName>Don Schmid</fullName>
            </value>
            <value>
                <fullName>Horvath, Judy</fullName>
            </value>
            <value>
                <fullName>Kepes, Erica</fullName>
            </value>
            <value>
                <fullName>Laine Mann</fullName>
            </value>
            <value>
                <fullName>Lee Kim</fullName>
            </value>
            <value>
                <fullName>Lisa Mahan</fullName>
            </value>
            <value>
                <fullName>Lopez, Ralph</fullName>
            </value>
            <value>
                <fullName>Michael Clearey</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nicole Brown</fullName>
            </value>
            <value>
                <fullName>Rocha, Paula</fullName>
            </value>
            <value>
                <fullName>Rosete, Aleida</fullName>
            </value>
            <value>
                <fullName>Sandra Kusek</fullName>
            </value>
            <value>
                <fullName>Schuler, Dan</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Shawn McDonald</fullName>
            </value>
            <value>
                <fullName>Suthee Suvansri</fullName>
            </value>
            <value>
                <fullName>Syntcha, Dawn</fullName>
            </value>
            <value>
                <fullName>Throckmorton, Andrea</fullName>
            </value>
            <value>
                <fullName>Virginia Hayward</fullName>
            </value>
            <value>
                <fullName>Werber, Michelle</fullName>
            </value>
            <value>
                <fullName>Zarrillo, Rose Marie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>