unpackaged/main/default/objects/CA_Event__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>