unpackaged/main/default/objects/CA_Event__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alex Boyd</fullName>
            </value>
            <value>
                <fullName>Boncek, Debbie</fullName>
            </value>
            <value>
                <fullName>Bullock, Deana</fullName>
            </value>
            <value>
                <fullName>Christine Dressman</fullName>
            </value>
            <value>
                <fullName>Debbie Boncek</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 1</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 2</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 3</fullName>
            </value>
            <value>
                <fullName>Heather Rosenow</fullName>
            </value>
            <value>
                <fullName>Jennifer Spencer</fullName>
            </value>
            <value>
                <fullName>John Boy</fullName>
            </value>
            <value>
                <fullName>Jones, Kevin</fullName>
            </value>
            <value>
                <fullName>Joy, Jess</fullName>
            </value>
            <value>
                <fullName>Lori Chester</fullName>
            </value>
            <value>
                <fullName>Lori Filloon</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Signoriello, Caroline</fullName>
            </value>
            <value>
                <fullName>Steve Maurer</fullName>
            </value>
            <value>
                <fullName>Tammy Dettling</fullName>
            </value>
            <value>
                <fullName>Tara Nigro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>