unpackaged/main/default/objects/CA_Event__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aldridge, Hannah</fullName>
            </value>
            <value>
                <fullName>Alita Mathews</fullName>
            </value>
            <value>
                <fullName>Allyson Wagner</fullName>
            </value>
            <value>
                <fullName>Amanda Shulman</fullName>
            </value>
            <value>
                <fullName>Amy Gerrard</fullName>
            </value>
            <value>
                <fullName>Angelina Palermo</fullName>
            </value>
            <value>
                <fullName>Ashley Simmons</fullName>
            </value>
            <value>
                <fullName>Beyer, Lisa</fullName>
            </value>
            <value>
                <fullName>Lisa Beyer</fullName>
                <label>Beyer. Lisa</label>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Brown, Caroline</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Callaway, Carsen</fullName>
            </value>
            <value>
                <fullName>Carey-Smalls, Fanchon</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Daphne Saavedra</fullName>
            </value>
            <value>
                <fullName>Dewey, Kaila</fullName>
            </value>
            <value>
                <fullName>Ellis, Richard</fullName>
            </value>
            <value>
                <fullName>Emily Rawls</fullName>
            </value>
            <value>
                <fullName>Epperson, Jill</fullName>
            </value>
            <value>
                <fullName>Fletcher, Samantha</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 3</fullName>
            </value>
            <value>
                <fullName>Harley, Lauren</fullName>
            </value>
            <value>
                <fullName>Jamie Brosmore</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Jessica Wertheimer</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Kayla Rogers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>