unpackaged/main/default/objects/CA_Event__c/fields/GES_PM_Phone__c.field-meta.xml
<CustomField>
    <fullName>GES_PM_Phone__c</fullName>
    <label>GES PM Phone</label>
    <type>Phone</type>
</CustomField>