unpackaged/main/default/objects/CA_Event__c/fields/GES_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager__c</fullName>
    <label>GES Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Al Grauzinis</fullName>
            </value>
            <value>
                <fullName>Andrew Vanhorn</fullName>
            </value>
            <value>
                <fullName>Andy Jones</fullName>
            </value>
            <value>
                <fullName>Andy Valentine</fullName>
            </value>
            <value>
                <fullName>Carl Ahrens</fullName>
            </value>
            <value>
                <fullName>Courtney Rowe</fullName>
            </value>
            <value>
                <fullName>Da silva, Camille</fullName>
            </value>
            <value>
                <fullName>Dave Botsford</fullName>
            </value>
            <value>
                <fullName>Donny Spray</fullName>
            </value>
            <value>
                <fullName>Duane Glossa</fullName>
            </value>
            <value>
                <fullName>Edward Haas</fullName>
            </value>
            <value>
                <fullName>Elizabeth Zajda</fullName>
            </value>
            <value>
                <fullName>Ferraro, Antonio</fullName>
            </value>
            <value>
                <fullName>Frank Cacciato</fullName>
            </value>
            <value>
                <fullName>GES Project Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Project Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Project Manager 3</fullName>
            </value>
            <value>
                <fullName>Greg Rawe</fullName>
            </value>
            <value>
                <fullName>James Haas</fullName>
            </value>
            <value>
                <fullName>Jim Angle</fullName>
            </value>
            <value>
                <fullName>Kelly, Alexa</fullName>
            </value>
            <value>
                <fullName>Margaret Zajda</fullName>
            </value>
            <value>
                <fullName>Medus, Heather</fullName>
            </value>
            <value>
                <fullName>Michael Samuel</fullName>
            </value>
            <value>
                <fullName>Mulvey, Mike</fullName>
            </value>
            <value>
                <fullName>Mike Samuel</fullName>
            </value>
            <value>
                <fullName>Montagne, Sarah</fullName>
            </value>
            <value>
                <fullName>Patty Welch</fullName>
            </value>
            <value>
                <fullName>Paul Readman</fullName>
            </value>
            <value>
                <fullName>Porter, Mike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>