unpackaged/main/default/objects/CA_Event__c/fields/Hosting_Organization_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Organization_Contact_Name__c</fullName>
    <label>Hosting Organization Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>