unpackaged/main/default/objects/CA_Event__c/fields/Hosting_Organization_Email__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Organization_Email__c</fullName>
    <label>Hosting Organization Email</label>
    <type>Email</type>
</CustomField>