unpackaged/main/default/objects/CA_Event__c/fields/I_D_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor__c</fullName>
    <label>I&amp;D Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Squyres</fullName>
            </value>
            <value>
                <fullName>Dave Dragoone</fullName>
            </value>
            <value>
                <fullName>Don Hadrava</fullName>
                <label>Hadrava, Don</label>
            </value>
            <value>
                <fullName>Heather Campbell</fullName>
            </value>
            <value>
                <fullName>I&amp;D Supervisor 1</fullName>
            </value>
            <value>
                <fullName>I&amp;D Supervisor 2</fullName>
            </value>
            <value>
                <fullName>I&amp;D Supervisor 3</fullName>
            </value>
            <value>
                <fullName>Joe Holland</fullName>
            </value>
            <value>
                <fullName>Ken Pantoliano</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pat Gallagher</fullName>
            </value>
            <value>
                <fullName>Randy Frields</fullName>
            </value>
            <value>
                <fullName>Mattson, Scott</fullName>
            </value>
            <value>
                <fullName>Skarupa, Dennis</fullName>
            </value>
            <value>
                <fullName>Steve Burgess</fullName>
            </value>
            <value>
                <fullName>Kari Storm</fullName>
                <label>Storm, Kari</label>
            </value>
            <value>
                <fullName>Tom Kessler</fullName>
            </value>
            <value>
                <fullName>Gary Vanderpol</fullName>
                <label>Vanderpol, Gary</label>
            </value>
            <value>
                <fullName>Monahan, Shane</fullName>
            </value>
            <value>
                <fullName>Finstrom, Brad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>