unpackaged/main/default/objects/CA_Event__c/fields/Meeting_Hours_Day_4__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours_Day_4__c</fullName>
    <formula>IF(AND(
ISBLANK(Day_4_Date__c),
 ISBLANK(Day_4_Open_Time__c),
 ISBLANK(Day_4_Close_Time__c) 
 ),
&quot;&quot;,
   IF(NOT(ISBLANK(Day_4_Date__c)),
TEXT(MONTH(Day_4_Date__c)) + &quot;/&quot; + TEXT(DAY(Day_4_Date__c)) + &quot;/&quot; +TEXT(YEAR(Day_4_Date__c)) + &quot; &quot;,&quot;&quot;) + 
IF(HOUR(Day_4_Open_Time__c) = 0, TEXT(12), 
IF(AND(HOUR(Day_4_Open_Time__c) &gt; 0, HOUR(Day_4_Open_Time__c) &lt;= 12),
TEXT(HOUR(Day_4_Open_Time__c)),
TEXT(HOUR(Day_4_Open_Time__c) - 12))) + 
   IF(NOT(ISBLANK(Day_4_Open_Time__c)),
&quot;:&quot; + LPAD(TEXT(MINUTE(Day_4_Open_Time__c)), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Day_4_Open_Time__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;) +
   IF(NOT(ISBLANK(Day_4_Close_Time__c)),
      IF(NOT(ISBLANK(Day_4_Open_Time__c)),&quot; - &quot;,&quot;&quot;) + 
IF(HOUR(Day_4_Close_Time__c) = 0, TEXT(12), 
IF(AND(HOUR(Day_4_Close_Time__c) &gt; 0, HOUR(Day_4_Close_Time__c) &lt;= 12),
TEXT(HOUR(Day_4_Close_Time__c)),
TEXT(HOUR(Day_4_Close_Time__c) - 12))) 
+ &quot;:&quot; + LPAD(TEXT(MINUTE(Day_4_Close_Time__c )), 2, &#39;0&#39;) + &quot; &quot; + IF(HOUR(Day_4_Close_Time__c) &lt; 12, &quot;AM&quot;, &quot;PM&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Hours Day 4</label>
    <type>Text</type>
</CustomField>